has a bug at PublishStartup\Publish

--- a/ExistekWEbProject/ExistekWEbProject.csproj
+++ b/ExistekWEbProject/ExistekWEbProject.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
+    <ProjectReference Include="..\BLL\BusinessLogic.csproj" />
   </ItemGroup>
 
 </Project>
