--- a/ExistekWEbProject/appsettings.Development.json
+++ b/ExistekWEbProject/appsettings.Development.json
@@ -5,5 +5,14 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "BasicFileConfig": {
+    "Filename": "article0",
+    "Author": "noname",
+    "PublishDate": "08/13/2021",
+    "InfoConfig": {
+      "TestText": "SomeConfiguration Value"
+    }
   }
 }
