basic logger functionality

--- a/ExistekWEbProject/appsettings.Development.json
+++ b/ExistekWEbProject/appsettings.Development.json
@@ -1,10 +1,33 @@
 {
+  //"Logging": {
+  //  "LogLevel": {
+  //    "Default": "Information",
+  //    "Microsoft": "Warning",
+  //    "Microsoft.Hosting.Lifetime": "Information"
+  //  }
+  //},
+
   "Logging": {
+    "Console": {
+      "LogLevel": {
+        "Default": "Information"
+      }
+    },
+    "Debug": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Trace",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "FileLog": {
+    "FileName": "log.txt",
+    "FolderPath": "c:\\TEMP\\"
   },
 
   "BasicFileConfig": {
@@ -16,3 +39,4 @@
     }
   }
 }
+  
