--- a/ExistekWEbProject/appsettings.Development.json
+++ b/ExistekWEbProject/appsettings.Development.json
@@ -1,12 +1,4 @@
 {
-  //"Logging": {
-  //  "LogLevel": {
-  //    "Default": "Information",
-  //    "Microsoft": "Warning",
-  //    "Microsoft.Hosting.Lifetime": "Information"
-  //  }
-  //},
-
   "Logging": {
     "Console": {
       "LogLevel": {
@@ -25,9 +17,20 @@
     }
   },
 
-  "FileLog": {
-    "FileName": "log.txt",
-    "FolderPath": "c:\\TEMP\\"
+
+  "FileLog" :{
+    "BasicFileLog": {
+      "FileName": "log.txt",
+      "FolderPath": "c:\\TEMP\\"
+    },
+    "ErrorFileLog": {
+      "FileName": "error_log.txt",
+      "FolderPath": "c:\\TEMP\\"
+    },
+    "ExceptionFileLog": {
+      "FileName": "exception_log.txt",
+      "FolderPath": "c:\\TEMP\\"
+    }
   },
 
   "BasicFileConfig": {
