--- a/ExistekWEbProject/ExistekWEbProject.csproj
+++ b/ExistekWEbProject/ExistekWEbProject.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="Ninject" Version="3.3.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
