half of routing + minor bug fixes

--- a/ExistekWEbProject/appsettings.Development.json
+++ b/ExistekWEbProject/appsettings.Development.json
@@ -27,8 +27,12 @@
       "FileName": "error_log.txt",
       "FolderPath": "c:\\TEMP\\"
     },
-    "ExceptionFileLog": {
-      "FileName": "exception_log.txt",
+    "WarningFileLog": {
+      "FileName": "warning_log.txt",
+      "FolderPath": "c:\\TEMP\\"
+    },
+    "InfoFileLog": {
+      "FileName": "info_log.txt",
       "FolderPath": "c:\\TEMP\\"
     }
   },
