--- a/ExistekWEbProject/ExistekWEbProject.csproj
+++ b/ExistekWEbProject/ExistekWEbProject.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="Ninject" Version="3.3.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
