added dbcontext and Repository and UnitOfWork patterns to work with db. Conn.string got to configs

--- a/ExistekWEbProject/appsettings.Development.json
+++ b/ExistekWEbProject/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+
   "Logging": {
     "Console": {
       "LogLevel": {
@@ -18,9 +19,9 @@
   },
 
 
-  "FileLog" :{
-    "BasicFileLog": {
-      "FileName": "log.txt",
+  "FileLog": {
+    "DebugFileLog": {
+      "FileName": "debug_log.txt",
       "FolderPath": "c:\\TEMP\\"
     },
     "ErrorFileLog": {
