--- a/ExistekWEbProject/appsettings.json
+++ b/ExistekWEbProject/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "localhost": "Server=.;Database=master;user=sa;pwd=Cap1tal!st;\"\""
+  }
 }
