exception filter working

--- a/ExistekWEbProject/appsettings.Development.json
+++ b/ExistekWEbProject/appsettings.Development.json
@@ -3,7 +3,7 @@
   "Logging": {
     "Console": {
       "LogLevel": {
-        "Default": "Information"
+        "Default": "Error"
       }
     },
     "Debug": {
@@ -45,6 +45,12 @@
     "InfoConfig": {
       "TestText": "SomeConfiguration Value"
     }
+  },
+
+  "ArticleDirCnfg": {
+    "Path": "C:\\Users\\helen\\source\\repos\\ExistekWEbProject\\ExistekWEbProject\\Articles",
+    //"Path": "C:\Users\helen\source\repos\ExistekWEbProject\ExistekWEbProject\Articles",
+    "Extension": "*.txt"
   }
 }
   
