--- a/ExistekWEbProject/appsettings.json
+++ b/ExistekWEbProject/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "localhost": "Server=.;Database=master;user=sa;pwd=Cap1tal!st;\"\""
+    //"localhost": "Server=.;Database=master;user=sa;pwd=Cap1tal!st;\"\"",
+    "localhost": "Server=localhost;Database=master;User Id=sa;Password=Cap1tal!st;"
   }
 }
