--- a/ExistekWEbProject/appsettings.Development.json
+++ b/ExistekWEbProject/appsettings.Development.json
@@ -49,7 +49,7 @@
 
   "ArticleDirCnfg": {
     "Path": "C:\\Users\\helen\\source\\repos\\ExistekWEbProject\\ExistekWEbProject\\Articles",
-    //"Path": "C:\Users\helen\source\repos\ExistekWEbProject\ExistekWEbProject\Articles",
+    //  C:\Users\helen\source\repos\ExistekWEbProject\ExistekWEbProject\Articles
     "Extension": "*.txt"
   }
 }
