tried to combine IActionFilter and IValidationObject - nothing.

--- a/ExistekWEbProject/appsettings.Development.json
+++ b/ExistekWEbProject/appsettings.Development.json
@@ -51,6 +51,12 @@
     "Path": "C:\\Users\\helen\\source\\repos\\ExistekWEbProject\\ExistekWEbProject\\Articles",
     //  C:\Users\helen\source\repos\ExistekWEbProject\ExistekWEbProject\Articles
     "Extension": "*.txt"
+  },
+
+  "KeysForRequest": {
+    "Prop1": "x",
+    "Prop2": "y",
+    "Result": "result"
   }
 }
   
